--- a/package.json
+++ b/package.json
@@ -16,20 +16,28 @@
     "@babel/parser": "^7.18.9",
     "@babel/traverse": "^7.18.9",
     "@babel/types": "^7.18.9",
+    "autoprefixer": "^10.4.12",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
+    "css-selector-tokenizer": "^0.8.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "mini-css-extract-plugin": "^2.6.1",
+    "postcss": "^8.4.16",
+    "postcss-loader": "^7.0.1",
     "speed-measure-webpack-plugin": "^1.5.0",
     "style-loader": "^3.3.1",
     "tapable": "^2.2.1",
+    "terser-webpack-plugin": "^5.3.6",
+    "to-string-loader": "^1.2.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "^4.6.0",
     "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
@@ -37,7 +45,6 @@
     "@babel/preset-env": "^7.19.1",
     "install": "^0.13.0",
     "jquery": "^3.6.0",
-    "less-loader": "^11.0.0",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "moment": "^2.29.4",
